<resources>
    <string name="app_name">Hygieia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    //for Promos and Rewards-->
    <!--    <string name="product">Product: </string>-->
    <!--    <string name="discount">Discount: </string>-->
    <!--    <string name="discPrice">Discounted Price: </string>-->
    <!--    <string name="ptsReq">Points Required: </string>-->

    //for promo items
    <string name="product_template">Product: %1$s</string>
    <string name="disc_price_template">Discounted Price: ₱%1$s</string>
    <string name="discount_template">-%1$s%%</string>
    <string name="points_req_template">%1$s pts</string>
    <string name="date_range">From %1$s to %2$s</string>

    //Profile
    <string name="customer_name">%1$s %2$s</string>
    <string name="address_template">%1$s, %2$s</string>
    <string name="complete_address_template">%1$s %2$s, %3$s, %4$s</string>

    //QR Code Fragment
    <string name="how_to_earn_points_instructions">1. Visit any of our affiliated stores and make a purchase. \n\n2. Return the recyclable packaging of the products you purchased back to the store. \n\n3. Present the clerk/staff with your QR code. \n\n4. The clerk will input how many recyclable items you have returned and add points to your account.</string>
    <string name="conversion_rate_explanation">The amount of points credited to your account depends on the quantity of the recyclable materials you have returned to the store.</string>

    //Common strings
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="login_instead">Login Instead</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="received_points">Received Points</string>
    <string name="add_points">+%1$s pts</string>
    <string name="subtract_points">-%1$s pts</string>
    <string name="redeemed">Redeemed %1$s</string>
    <string name="no_active_promos">No Active Promos</string>
    <string name="option_title">Option Title</string>
    <string name="choose_your_profile_pic">Choose Your Profile Pic</string>
    <string name="your_current_balance_is">Your current balance is</string>
    <string name="how_to_earn_points_by_recycling_with_hygieia">How to earn points by recycling with Hygieia</string>
    <string name="conversion_rate">Conversion Rate:</string>
    <string name="_0_0">0.0</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="get_started">Get Started</string>
    <string name="earn_more">Earn More</string>
    <string name="recycle_now">Recycle Now!</string>
    <string name="shop_at_any_of_our_affiliated_stores_return_the_recyclable_packaging_s_scan_your_qr_code_to_earn_points_effortlessly_it_s_that_simple">Shop at any of our affiliated stores, return the recyclable packaging\'s, scan your qr code to earn points effortlessly. It\'s that simple.</string>
    <string name="rewards">Rewards</string>
    <string name="see_what_products_you_can_avail_with_your_points">See what products you can avail with your points</string>
    <string name="promos">Promos</string>
    <string name="see_available_promos_offered_by_our_affiliated_stores">See available promos offered by our affiliated stores</string>
    <string name="our_affiliated_stores">Our Affiliated Stores</string>
    <string name="register">Register</string>
    <string name="sitio">Sitio</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="barangay">Barangay</string>
    <string name="the_store_accepts">The store accepts</string>
    <string name="pts">PTS</string>
    <string name="_0">0</string>
    <string name="store_has_no_offered_rewards">No Rewards Available</string>
    <string name="free">FREE</string>
    <string name="original_price">Original Price: ₱%1$s</string>
    <string name="validate">Validate</string>
    <string name="build_you_profile">Build your Profile</string>
    <string name="search_store">Search store name or address</string>
    <string name="search_reward">Enter Item Name</string>
    <string name="search_promo">Search Promo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="userName">"%1$s %2$s "</string>
    <string name="id">ID: %1$s</string>
    <string name="peso_sign">₱%1$s</string>
    <string name="date_range_transactions">%1$s to %2$s</string>
    <string name="stores_near_me">Stores near me</string>

    <style name="title_activity_stores_near_me">Stores Near Me</style>
</resources>