<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".ForgotPasswordFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/main_green"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/main_green"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:layout_marginHorizontal="100dp"/>

</LinearLayout>