<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:fillViewport="true"
    android:isScrollContainer="true"
    tools:context=".pages.signup.BuildProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/regular"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Getting Started"
            android:textColor="@color/main_green"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/build_you_profile"
            android:textColor="@color/main_green"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/emailLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="30dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:hint="@string/email"-->
<!--            app:endIconMode="clear_text"-->
<!--            app:helperTextTextColor="@color/red">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/email"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:drawableStart="@drawable/email"-->
<!--                android:drawablePadding="10dp"-->
<!--                android:inputType="textEmailAddress" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sitioLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/sitio"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sitio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/location"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/barangayLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/barangay"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/barangay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/location"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/city"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/location"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/provinceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/province"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/location"
                android:drawablePadding="10dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_button"
            android:padding="2dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_regular"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>