<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".pages.store.StoreProfileFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <include layout="@layout/placeholder_store_profile" />
                </com.facebook.shimmer.ShimmerFrameLayout>

                <LinearLayout
                    android:id="@+id/actualLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/storePhoto"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/details"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginHorizontal="@dimen/medium"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/small"
                        app:layout_constraintBottom_toTopOf="@id/options"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/storePhoto">

                        <TextView
                            android:id="@+id/storeName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:textSize="@dimen/text_regular"
                            app:layout_constraintBottom_toTopOf="@id/icons"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/icons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/small"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/storeName">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="@dimen/regular"
                                android:layout_height="@dimen/regular"
                                android:layout_marginEnd="@dimen/tiniest"
                                android:layout_marginBottom="@dimen/tiniest"
                                android:src="@drawable/location"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/location_icon" />

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="@dimen/regular"
                                android:layout_height="@dimen/regular"
                                android:src="@drawable/email"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/location_icon" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/small"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/icons"
                            app:layout_constraintTop_toBottomOf="@id/storeName">

                            <TextView
                                android:id="@+id/storeAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/tiniest"
                                app:layout_constraintStart_toEndOf="@+id/location_icon"
                                app:layout_constraintTop_toBottomOf="@+id/storeName" />

                            <TextView
                                android:id="@+id/storeEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toEndOf="@+id/email_icon"
                                app:layout_constraintTop_toBottomOf="@+id/storeAddress" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/the_store_accepts"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginHorizontal="@dimen/small"/>

                    <HorizontalScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tiny"
                        android:layout_marginVertical="@dimen/small">

                        <LinearLayout
                            android:id="@+id/recyclables"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        </LinearLayout>

                    </HorizontalScrollView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/options"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/fragment_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/details">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/reward"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/tab_selector_active"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/promo"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:text="@string/rewards"/>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/promo"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@drawable/tab_selector_inactive"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/reward"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:text="@string/promos"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <FrameLayout
                        android:id="@+id/fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="600dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/options" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>